[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/interface/RButton.gd" type="Script" id=1]
[ext_resource path="res://resources/fontness10.tres" type="DynamicFont" id=2]

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.784314, 0.431373, 0.627451, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
shadow_color = Color( 0, 0, 0, 0 )
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.784314, 0.431373, 0.627451, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
shadow_color = Color( 0, 0, 0, 0 )
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.784314, 0.431373, 0.627451, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
shadow_color = Color( 0, 0, 0, 0 )
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.431373, 0.431373, 0.627451, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
shadow_color = Color( 0, 0, 0, 0 )
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.431373, 0.431373, 0.627451, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
shadow_color = Color( 0, 0, 0, 0 )
anti_aliasing = false

[node name="NButton" type="Button"]
margin_right = 480.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_disabled = Color( 0.431373, 0.431373, 0.627451, 1 )
custom_colors/font_color = Color( 0.431373, 0.431373, 0.627451, 1 )
custom_colors/font_color_hover = Color( 0.784314, 0.431373, 0.627451, 1 )
custom_colors/font_color_pressed = Color( 0.784314, 0.431373, 0.627451, 1 )
text = "Default"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="focus_entered" from="." to="." method="on_button_focus_entered"]
[connection signal="mouse_entered" from="." to="." method="on_button_mouse_entered"]
[connection signal="pressed" from="." to="." method="on_button_pressed"]
